# soundcli

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
packaging/homebrew/: soundcli.rb
site/: index.html
src/: app.rs  browser.rs  config.rs  main.rs  model.rs  soundcloud.rs  theme.rs  ui.rs  volume.rs
src/controller/: demo.rs  mod.rs  mpris.rs
